compiler/tests/compiler/must_fail/t_27.mil
// ill-typed addition

extern fn test(x : reg u64, y : reg bool) -> reg u64 {
  x += y;
  return x;
}

/*
START:CMD
ARG="renumber_fun_unique,typecheck"
END:CMD
*/
